@@ -22,7 +22,6 @@ import simplejson as json
 import six
 from six.moves import urllib_parse
 
-sysaddon = sys.argv[0] ; syshandle = int(sys.argv[1])
 accepted_extensions = ['mkv','mp4','avi', 'm4v']
 
 class furk:
@@ -166,6 +165,8 @@ class furk:
 
     def addDirectoryItem(self, name, query, thumb, icon, isAction=True):
         try:
+            sysaddon = sys.argv[0]
+            syshandle = int(sys.argv[1])
             name = six.ensure_str(name)
             url = '%s?action=%s' % (sysaddon, query) if isAction == True else query
             item = control.item(label=name)
@@ -175,5 +176,6 @@ class furk:
             pass
 
     def endDirectory(self):
+        syshandle = int(sys.argv[1])
         control.content(syshandle, 'addons')
         control.directory(syshandle, cacheToDisc=True)
